--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
   <head>
 
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Lugx Gaming Template - Contact Page</title>
+    <title>Template Lugx Gaming - Página de Contato</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
-    <!-- Additional CSS Files -->
+    <!-- CSS Adicional -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-lugx-gaming.css">
     <link rel="stylesheet" href="assets/css/owl.css">
@@ -30,7 +30,7 @@ https://templatemo.com/tm-589-lugx-gaming
 
 <body>
 
-  <!-- ***** Preloader Start ***** -->
+  <!-- ***** Preloader Início ***** -->
   <div id="js-preloader" class="js-preloader">
     <div class="preloader-inner">
       <span class="dot"></span>
@@ -41,44 +41,44 @@ https://templatemo.com/tm-589-lugx-gaming
       </div>
     </div>
   </div>
-  <!-- ***** Preloader End ***** -->
+  <!-- ***** Preloader Fim ***** -->
 
-  <!-- ***** Header Area Start ***** -->
+  <!-- ***** Área do Cabeçalho Início ***** -->
   <header class="header-area header-sticky">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <nav class="main-nav">
-                    <!-- ***** Logo Start ***** -->
+                    <!-- ***** Logo Início ***** -->
                     <a href="index.html" class="logo">
                         <img src="assets/images/logo.png" alt="" style="width: 158px;">
                     </a>
-                    <!-- ***** Logo End ***** -->
-                    <!-- ***** Menu Start ***** -->
+                    <!-- ***** Logo Fim ***** -->
+                    <!-- ***** Menu Início ***** -->
                     <ul class="nav">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="shop.html">Our Shop</a></li>
-                      <li><a href="product-details.html">Product Details</a></li>
-                      <li><a href="contact.html" class="active">Contact Us</a></li>
-                      <li><a href="#">Sign In</a></li>
+                      <li><a href="index.html">Início</a></li>
+                      <li><a href="shop.html">Nossa Loja</a></li>
+                      <li><a href="product-details.html">Detalhes do Produto</a></li>
+                      <li><a href="contact.html" class="active">Fale Conosco</a></li>
+                      <li><a href="#">Entrar</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
                     </a>
-                    <!-- ***** Menu End ***** -->
+                    <!-- ***** Menu Fim ***** -->
                 </nav>
             </div>
         </div>
     </div>
   </header>
-  <!-- ***** Header Area End ***** -->
+  <!-- ***** Área do Cabeçalho Fim ***** -->
 
   <div class="page-heading header-text">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h3>Contact Us</h3>
-          <span class="breadcrumb"><a href="#">Home</a>  >  Contact Us</span>
+          <h3>Fale Conosco</h3>
+          <span class="breadcrumb"><a href="#">Início</a>  >  Fale Conosco</span>
         </div>
       </div>
     </div>
@@ -90,13 +90,13 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-6 align-self-center">
           <div class="left-text">
             <div class="section-heading">
-              <h6>Contact Us</h6>
-              <h2>Say Hello!</h2>
+              <h6>Fale Conosco</h6>
+              <h2>Diga Olá!</h2>
             </div>
-            <p>LUGX Gaming Template is based on the latest Bootstrap 5 CSS framework. This template is provided by TemplateMo and it is suitable for your gaming shop ecommerce websites. Feel free to use this for any purpose. Thank you.</p>
+            <p>O Template Lugx Gaming é baseado no mais recente framework CSS Bootstrap 5. Este template é fornecido pela TemplateMo e é adequado para sites de e-commerce de jogos. Sinta-se à vontade para usar para qualquer finalidade. Obrigado.</p>
             <ul>
-              <li><span>Address</span> Sunny Isles Beach, FL 33160, United States</li>
-              <li><span>Phone</span> +123 456 7890</li>
+              <li><span>Endereço</span> Sunny Isles Beach, FL 33160, Estados Unidos</li>
+              <li><span>Telefone</span> +123 456 7890</li>
               <li><span>Email</span> lugx@contact.com</li>
             </ul>
           </div>
@@ -114,32 +114,32 @@ https://templatemo.com/tm-589-lugx-gaming
                   <div class="row">
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="name" name="name" id="name" placeholder="Your Name..." autocomplete="on" required>
+                        <input type="name" name="name" id="name" placeholder="Seu Nome..." autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="surname" name="surname" id="surname" placeholder="Your Surname..." autocomplete="on" required>
+                        <input type="surname" name="surname" id="surname" placeholder="Seu Sobrenome..." autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your E-mail..." required="">
+                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Seu E-mail..." required="">
                       </fieldset>
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="subject" name="subject" id="subject" placeholder="Subject..." autocomplete="on" >
+                        <input type="subject" name="subject" id="subject" placeholder="Assunto..." autocomplete="on" >
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <textarea name="message" id="message" placeholder="Your Message"></textarea>
+                        <textarea name="message" id="message" placeholder="Sua Mensagem"></textarea>
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <button type="submit" id="form-submit" class="orange-button">Send Message Now</button>
+                        <button type="submit" id="form-submit" class="orange-button">Enviar Mensagem Agora</button>
                       </fieldset>
                     </div>
                   </div>
@@ -155,7 +155,7 @@ https://templatemo.com/tm-589-lugx-gaming
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+        <p>Copyright © 2048 LUGX Gaming Company. Todos os direitos reservados. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
       </div>
     </div>
   </footer>
