--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
   <head>
 
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Lugx Gaming Shop HTML5 Template</title>
+    <title>Template HTML5 Loja de Games Lugx</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -56,11 +56,11 @@ https://templatemo.com/tm-589-lugx-gaming
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                      <li><a href="index.html" class="active">Home</a></li>
-                      <li><a href="shop.html">Our Shop</a></li>
-                      <li><a href="product-details.html">Product Details</a></li>
-                      <li><a href="contact.html">Contact Us</a></li>
-                      <li><a href="#">Sign In</a></li>
+                      <li><a href="index.html" class="active">Início</a></li>
+                      <li><a href="shop.html">Nossa Loja</a></li>
+                      <li><a href="product-details.html">Detalhes do Produto</a></li>
+                      <li><a href="contact.html">Contato</a></li>
+                      <li><a href="#">Entrar</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -78,13 +78,13 @@ https://templatemo.com/tm-589-lugx-gaming
       <div class="row">
         <div class="col-lg-6 align-self-center">
           <div class="caption header-text">
-            <h6>Welcome to lugx</h6>
-            <h2>BEST GAMING SITE EVER!</h2>
-            <p>LUGX Gaming is free Bootstrap 5 HTML CSS website template for your gaming websites. You can download and use this layout for commercial purposes. Please tell your friends about TemplateMo.</p>
+            <h6>Bem-vindo ao Lugx</h6>
+            <h2>O MELHOR SITE DE GAMES!</h2>
+            <p>LUGX Gaming é um template gratuito em Bootstrap 5 HTML CSS para sites de games. Você pode baixar e usar este layout para fins comerciais. Compartilhe com seus amigos sobre o TemplateMo.</p>
             <div class="search-input">
               <form id="search" action="#">
-                <input type="text" placeholder="Type Something" id='searchText' name="searchKeyword" onkeypress="handle" />
-                <button role="button">Search Now</button>
+                <input type="text" placeholder="Digite Algo" id='searchText' name="searchKeyword" onkeypress="handle" />
+                <button role="button">Pesquisar Agora</button>
               </form>
             </div>
           </div>
@@ -92,7 +92,7 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-4 offset-lg-2">
           <div class="right-image">
             <img src="assets/images/banner-image.jpg" alt="">
-            <span class="price">$22</span>
+            <span class="price">R$22</span>
             <span class="offer">-40%</span>
           </div>
         </div>
@@ -109,7 +109,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <div class="image">
                 <img src="assets/images/featured-01.png" alt="" style="max-width: 44px;">
               </div>
-              <h4>Free Storage</h4>
+              <h4>Armazenamento Grátis</h4>
             </div>
           </a>
         </div>
@@ -119,7 +119,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <div class="image">
                 <img src="assets/images/featured-02.png" alt="" style="max-width: 44px;">
               </div>
-              <h4>User More</h4>
+              <h4>Mais Usuários</h4>
             </div>
           </a>
         </div>
@@ -129,7 +129,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <div class="image">
                 <img src="assets/images/featured-03.png" alt="" style="max-width: 44px;">
               </div>
-              <h4>Reply Ready</h4>
+              <h4>Pronto para Responder</h4>
             </div>
           </a>
         </div>
@@ -139,7 +139,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <div class="image">
                 <img src="assets/images/featured-04.png" alt="" style="max-width: 44px;">
               </div>
-              <h4>Easy Layout</h4>
+              <h4>Layout Fácil</h4>
             </div>
           </a>
         </div>
@@ -152,23 +152,23 @@ https://templatemo.com/tm-589-lugx-gaming
       <div class="row">
         <div class="col-lg-6">
           <div class="section-heading">
-            <h6>Trending</h6>
-            <h2>Trending Games</h2>
+            <h6>Tendências</h6>
+            <h2>Jogos em Tendência</h2>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="main-button">
-            <a href="shop.html">View All</a>
+            <a href="shop.html">Ver Todos</a>
           </div>
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="item">
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/trending-01.jpg" alt=""></a>
-              <span class="price"><em>$28</em>$20</span>
+              <span class="price"><em>R$28</em>R$20</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -178,10 +178,10 @@ https://templatemo.com/tm-589-lugx-gaming
           <div class="item">
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/trending-02.jpg" alt=""></a>
-              <span class="price">$44</span>
+              <span class="price">R$44</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -191,10 +191,10 @@ https://templatemo.com/tm-589-lugx-gaming
           <div class="item">
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/trending-03.jpg" alt=""></a>
-              <span class="price"><em>$64</em>$44</span>
+              <span class="price"><em>R$64</em>R$44</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -204,10 +204,10 @@ https://templatemo.com/tm-589-lugx-gaming
           <div class="item">
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/trending-04.jpg" alt=""></a>
-              <span class="price">$32</span>
+              <span class="price">R$32</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -223,12 +223,12 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-6">
           <div class="section-heading">
             <h6>TOP GAMES</h6>
-            <h2>Most Played</h2>
+            <h2>Mais Jogados</h2>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="main-button">
-            <a href="shop.html">View All</a>
+            <a href="shop.html">Ver Todos</a>
           </div>
         </div>
         <div class="col-lg-2 col-md-6 col-sm-6">
@@ -237,9 +237,9 @@ https://templatemo.com/tm-589-lugx-gaming
               <a href="product-details.html"><img src="assets/images/top-game-01.jpg" alt=""></a>
             </div>
             <div class="down-content">
-                <span class="category">Adventure</span>
+                <span class="category">Aventura</span>
                 <h4>Assasin Creed</h4>
-                <a href="product-details.html">Explore</a>
+                <a href="product-details.html">Explorar</a>
             </div>
           </div>
         </div>
@@ -249,9 +249,9 @@ https://templatemo.com/tm-589-lugx-gaming
               <a href="product-details.html"><img src="assets/images/top-game-02.jpg" alt=""></a>
             </div>
             <div class="down-content">
-                <span class="category">Adventure</span>
+                <span class="category">Aventura</span>
                 <h4>Assasin Creed</h4>
-                <a href="product-details.html">Explore</a>
+                <a href="product-details.html">Explorar</a>
             </div>
           </div>
         </div>
@@ -261,9 +261,9 @@ https://templatemo.com/tm-589-lugx-gaming
               <a href="product-details.html"><img src="assets/images/top-game-03.jpg" alt=""></a>
             </div>
             <div class="down-content">
-                <span class="category">Adventure</span>
+                <span class="category">Aventura</span>
                 <h4>Assasin Creed</h4>
-                <a href="product-details.html">Explore</a>
+                <a href="product-details.html">Explorar</a>
             </div>
           </div>
         </div>
@@ -273,9 +273,9 @@ https://templatemo.com/tm-589-lugx-gaming
               <a href="product-details.html"><img src="assets/images/top-game-04.jpg" alt=""></a>
             </div>
             <div class="down-content">
-                <span class="category">Adventure</span>
+                <span class="category">Aventura</span>
                 <h4>Assasin Creed</h4>
-                <a href="product-details.html">Explore</a>
+                <a href="product-details.html">Explorar</a>
             </div>
           </div>
         </div>
@@ -285,9 +285,9 @@ https://templatemo.com/tm-589-lugx-gaming
               <a href="product-details.html"><img src="assets/images/top-game-05.jpg" alt=""></a>
             </div>
             <div class="down-content">
-                <span class="category">Adventure</span>
+                <span class="category">Aventura</span>
                 <h4>Assasin Creed</h4>
-                <a href="product-details.html">Explore</a>
+                <a href="product-details.html">Explorar</a>
             </div>
           </div>
         </div>
@@ -297,9 +297,9 @@ https://templatemo.com/tm-589-lugx-gaming
               <a href="product-details.html"><img src="assets/images/top-game-06.jpg" alt=""></a>
             </div>
             <div class="down-content">
-                <span class="category">Adventure</span>
+                <span class="category">Aventura</span>
                 <h4>Assasin Creed</h4>
-                <a href="product-details.html">Explore</a>
+                <a href="product-details.html">Explorar</a>
             </div>
           </div>
         </div>
@@ -312,13 +312,13 @@ https://templatemo.com/tm-589-lugx-gaming
       <div class="row">
         <div class="col-lg-12 text-center">
           <div class="section-heading">
-            <h6>Categories</h6>
-            <h2>Top Categories</h2>
+            <h6>Categorias</h6>
+            <h2>Principais Categorias</h2>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Ação</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-01.jpg" alt=""></a>
             </div>
@@ -326,7 +326,7 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Ação</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-05.jpg" alt=""></a>
             </div>
@@ -334,7 +334,7 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Ação</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-03.jpg" alt=""></a>
             </div>
@@ -342,7 +342,7 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Ação</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-04.jpg" alt=""></a>
             </div>
@@ -350,7 +350,7 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Ação</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-05.jpg" alt=""></a>
             </div>
@@ -368,12 +368,12 @@ https://templatemo.com/tm-589-lugx-gaming
             <div class="row">
               <div class="col-lg-12">
                 <div class="section-heading">
-                  <h6>Our Shop</h6>
-                  <h2>Go Pre-Order Buy & Get Best <em>Prices</em> For You!</h2>
+                  <h6>Nossa Loja</h6>
+                  <h2>Compre Agora e Obtenha os <em>Melhores Preços</em> Para Você!</h2>
                 </div>
                 <p>Lorem ipsum dolor consectetur adipiscing, sed do eiusmod tempor incididunt.</p>
                 <div class="main-button">
-                  <a href="shop.html">Shop Now</a>
+                  <a href="shop.html">Comprar Agora</a>
                 </div>
               </div>
             </div>
@@ -385,12 +385,12 @@ https://templatemo.com/tm-589-lugx-gaming
               <div class="col-lg-12">
                 <div class="section-heading">
                   <h6>NEWSLETTER</h6>
-                  <h2>Get Up To $100 Off Just Buy <em>Subscribe</em> Newsletter!</h2>
+                  <h2>Ganhe Até R$100 Comprando e <em>Assinando</em> Nossa Newsletter!</h2>
                 </div>
                 <div class="search-input">
                   <form id="subscribe" action="#">
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your email...">
-                    <button type="submit">Subscribe Now</button>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email...">
+                    <button type="submit">Assine Agora</button>
                   </form>
                 </div>
               </div>
@@ -404,7 +404,7 @@ https://templatemo.com/tm-589-lugx-gaming
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+        <p>Copyright © 2048 LUGX Gaming Company. Todos os direitos reservados. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
       </div>
     </div>
   </footer>
