--- a/product-details.html
+++ b/product-details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
   <head>
 
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Lugx Gaming - Product Detail</title>
+    <title>Lugx Gaming - Detalhes do Produto</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Additional CSS Files -->
+    <!-- CSS Adicional -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-lugx-gaming.css">
     <link rel="stylesheet" href="assets/css/owl.css">
@@ -29,7 +29,7 @@ https://templatemo.com/tm-589-lugx-gaming
 
 <body>
 
-  <!-- ***** Preloader Start ***** -->
+  <!-- ***** Preloader Início ***** -->
   <div id="js-preloader" class="js-preloader">
     <div class="preloader-inner">
       <span class="dot"></span>
@@ -40,44 +40,44 @@ https://templatemo.com/tm-589-lugx-gaming
       </div>
     </div>
   </div>
-  <!-- ***** Preloader End ***** -->
+  <!-- ***** Preloader Fim ***** -->
 
-  <!-- ***** Header Area Start ***** -->
+  <!-- ***** Área do Cabeçalho Início ***** -->
   <header class="header-area header-sticky">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <nav class="main-nav">
-                    <!-- ***** Logo Start ***** -->
+                    <!-- ***** Logo Início ***** -->
                     <a href="index.html" class="logo">
                         <img src="assets/images/logo.png" alt="" style="width: 158px;">
                     </a>
-                    <!-- ***** Logo End ***** -->
-                    <!-- ***** Menu Start ***** -->
+                    <!-- ***** Logo Fim ***** -->
+                    <!-- ***** Menu Início ***** -->
                     <ul class="nav">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="shop.html">Our Shop</a></li>
-                      <li><a href="product-details.html" class="active">Product Details</a></li>
-                      <li><a href="contact.html">Contact Us</a></li>
-                      <li><a href="#">Sign In</a></li>
+                      <li><a href="index.html">Início</a></li>
+                      <li><a href="shop.html">Nossa Loja</a></li>
+                      <li><a href="product-details.html" class="active">Detalhes do Produto</a></li>
+                      <li><a href="contact.html">Fale Conosco</a></li>
+                      <li><a href="#">Entrar</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
                     </a>
-                    <!-- ***** Menu End ***** -->
+                    <!-- ***** Menu Fim ***** -->
                 </nav>
             </div>
         </div>
     </div>
   </header>
-  <!-- ***** Header Area End ***** -->
+  <!-- ***** Área do Cabeçalho Fim ***** -->
 
   <div class="page-heading header-text">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
           <h3>Modern Warfare® II</h3>
-          <span class="breadcrumb"><a href="#">Home</a>  >  <a href="#">Shop</a>  >  Assasin Creed</span>
+          <span class="breadcrumb"><a href="#">Início</a>  >  <a href="#">Loja</a>  >  Assasin Creed</span>
         </div>
       </div>
     </div>
@@ -94,15 +94,15 @@ https://templatemo.com/tm-589-lugx-gaming
         <div class="col-lg-6 align-self-center">
           <h4>Call of Duty®: Modern Warfare® II</h4>
           <span class="price"><em>$28</em> $22</span>
-          <p>LUGX Gaming Template is based on the latest Bootstrap 5 CSS framework. This template is provided by TemplateMo and it is suitable for your gaming shop ecommerce websites. Feel free to use this for any purpose. Thank you.</p>
+          <p>O Template Lugx Gaming é baseado no mais recente framework CSS Bootstrap 5. Este template é fornecido pela TemplateMo e é adequado para sites de e-commerce de jogos. Sinta-se à vontade para usar para qualquer finalidade. Obrigado.</p>
           <form id="qty" action="#">
             <input type="qty" class="form-control" id="1" aria-describedby="quantity" placeholder="1">
-            <button type="submit"><i class="fa fa-shopping-bag"></i> ADD TO CART</button>
+            <button type="submit"><i class="fa fa-shopping-bag"></i> ADICIONAR AO CARRINHO</button>
           </form>
           <ul>
-            <li><span>Game ID:</span> COD MMII</li>
-            <li><span>Genre:</span> <a href="#">Action</a>, <a href="#">Team</a>, <a href="#">Single</a></li>
-            <li><span>Multi-tags:</span> <a href="#">War</a>, <a href="#">Battle</a>, <a href="#">Royal</a></li>
+            <li><span>ID do Jogo:</span> COD MMII</li>
+            <li><span>Gênero:</span> <a href="#">Ação</a>, <a href="#">Equipe</a>, <a href="#">Single</a></li>
+            <li><span>Multi-tags:</span> <a href="#">Guerra</a>, <a href="#">Batalha</a>, <a href="#">Royal</a></li>
           </ul>
         </div>
         <div class="col-lg-12">
@@ -121,21 +121,21 @@ https://templatemo.com/tm-589-lugx-gaming
               <div class="nav-wrapper ">
                 <ul class="nav nav-tabs" role="tablist">
                   <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="description-tab" data-bs-toggle="tab" data-bs-target="#description" type="button" role="tab" aria-controls="description" aria-selected="true">Description</button>
+                    <button class="nav-link active" id="description-tab" data-bs-toggle="tab" data-bs-target="#description" type="button" role="tab" aria-controls="description" aria-selected="true">Descrição</button>
                   </li>
                   <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="reviews-tab" data-bs-toggle="tab" data-bs-target="#reviews" type="button" role="tab" aria-controls="reviews" aria-selected="false">Reviews (3)</button>
+                    <button class="nav-link" id="reviews-tab" data-bs-toggle="tab" data-bs-target="#reviews" type="button" role="tab" aria-controls="reviews" aria-selected="false">Avaliações (3)</button>
                   </li>
                 </ul>
               </div>              
               <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
-                  <p>You can search for more templates on Google Search using keywords such as "templatemo digital marketing", "templatemo one-page", "templatemo gallery", etc. Please tell your friends about our website. If you need a variety of HTML templates, you may visit Tooplate and Too CSS websites.</p>
+                  <p>Você pode pesquisar mais templates no Google usando palavras-chave como "templatemo marketing digital", "templatemo one-page", "templatemo galeria", etc. Conte aos seus amigos sobre nosso site. Se precisar de uma variedade de templates HTML, você pode visitar os sites Tooplate e Too CSS.</p>
                   <br>
-                  <p>Coloring book air plant shabby chic, crucifix normcore raclette cred swag artisan activated charcoal. PBR&B fanny pack pok pok gentrify truffaut kitsch helvetica jean shorts edison bulb poutine next level humblebrag la croix adaptogen. Hashtag poke literally locavore, beard marfa kogi bruh artisan succulents seitan tonx waistcoat chambray taxidermy. Same cred meggings 3 wolf moon lomo irony cray hell of bitters asymmetrical gluten-free art party raw denim chillwave tousled try-hard succulents street art.</p>
+                  <p>Livro de colorir, planta aérea shabby chic, crucifixo normcore raclette cred swag artesão carvão ativado. PBR&B pochete pok pok gentrify truffaut kitsch helvetica shorts jeans lâmpada Edison poutine next level humblebrag la croix adaptogen. Hashtag poke literalmente locavore, barba marfa kogi bruh artesão suculentas seitan tonx colete chambray taxidermia. Mesmo cred meggings 3 wolf moon lomo irony cray hell of bitters assimétrico sem glúten festa de arte denim cru chillwave despenteado try-hard suculentas street art.</p>
                 </div>
                 <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
-                  <p>Coloring book air plant shabby chic, crucifix normcore raclette cred swag artisan activated charcoal. PBR&B fanny pack pok pok gentrify truffaut kitsch helvetica jean shorts edison bulb poutine next level humblebrag la croix adaptogen. <br><br>Hashtag poke literally locavore, beard marfa kogi bruh artisan succulents seitan tonx waistcoat chambray taxidermy. Same cred meggings 3 wolf moon lomo irony cray hell of bitters asymmetrical gluten-free art party raw denim chillwave tousled try-hard succulents street art.</p>
+                  <p>Livro de colorir, planta aérea shabby chic, crucifixo normcore raclette cred swag artesão carvão ativado. PBR&B pochete pok pok gentrify truffaut kitsch helvetica shorts jeans lâmpada Edison poutine next level humblebrag la croix adaptogen. <br><br>Hashtag poke literalmente locavore, barba marfa kogi bruh artesão suculentas seitan tonx colete chambray taxidermia. Mesmo cred meggings 3 wolf moon lomo irony cray hell of bitters assimétrico sem glúten festa de arte denim cru chillwave despenteado try-hard suculentas street art.</p>
                 </div>
               </div>
             </div>
@@ -150,18 +150,18 @@ https://templatemo.com/tm-589-lugx-gaming
       <div class="row">
         <div class="col-lg-6">
           <div class="section-heading">
-            <h6>Action</h6>
-            <h2>Related Games</h2>
+            <h6>Ação</h6>
+            <h2>Jogos Relacionados</h2>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="main-button">
-            <a href="shop.html">View All</a>
+            <a href="shop.html">Ver Todos</a>
           </div>
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Ação</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-01.jpg" alt=""></a>
             </div>
@@ -169,7 +169,7 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Ação</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-05.jpg" alt=""></a>
             </div>
@@ -177,7 +177,7 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Ação</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-03.jpg" alt=""></a>
             </div>
@@ -185,7 +185,7 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Ação</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-04.jpg" alt=""></a>
             </div>
@@ -193,7 +193,7 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Ação</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-05.jpg" alt=""></a>
             </div>
@@ -206,7 +206,7 @@ https://templatemo.com/tm-589-lugx-gaming
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+        <p>Copyright © 2048 LUGX Gaming Company. Todos os direitos reservados. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
       </div>
     </div>
   </footer>
