--- a/shop.html
+++ b/shop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
   <head>
 
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <title>Lugx Gaming - Shop Page</title>
+    <title>Lugx Gaming - Loja</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
-    <!-- Additional CSS Files -->
+    <!-- CSS Adicional -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-lugx-gaming.css">
     <link rel="stylesheet" href="assets/css/owl.css">
@@ -30,7 +30,7 @@ https://templatemo.com/tm-589-lugx-gaming
 
 <body>
 
-  <!-- ***** Preloader Start ***** -->
+  <!-- ***** Preloader Início ***** -->
   <div id="js-preloader" class="js-preloader">
     <div class="preloader-inner">
       <span class="dot"></span>
@@ -41,44 +41,44 @@ https://templatemo.com/tm-589-lugx-gaming
       </div>
     </div>
   </div>
-  <!-- ***** Preloader End ***** -->
+  <!-- ***** Preloader Fim ***** -->
 
-  <!-- ***** Header Area Start ***** -->
+  <!-- ***** Área do Cabeçalho Início ***** -->
   <header class="header-area header-sticky">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <nav class="main-nav">
-                    <!-- ***** Logo Start ***** -->
+                    <!-- ***** Logo Início ***** -->
                     <a href="index.html" class="logo">
                         <img src="assets/images/logo.png" alt="" style="width: 158px;">
                     </a>
-                    <!-- ***** Logo End ***** -->
-                    <!-- ***** Menu Start ***** -->
+                    <!-- ***** Logo Fim ***** -->
+                    <!-- ***** Menu Início ***** -->
                     <ul class="nav">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="shop.html" class="active">Our Shop</a></li>
-                      <li><a href="product-details.html">Product Details</a></li>
-                      <li><a href="contact.html">Contact Us</a></li>
-                      <li><a href="#">Sign In</a></li>
+                      <li><a href="index.html">Início</a></li>
+                      <li><a href="shop.html" class="active">Nossa Loja</a></li>
+                      <li><a href="product-details.html">Detalhes do Produto</a></li>
+                      <li><a href="contact.html">Fale Conosco</a></li>
+                      <li><a href="#">Entrar</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
                     </a>
-                    <!-- ***** Menu End ***** -->
+                    <!-- ***** Menu Fim ***** -->
                 </nav>
             </div>
         </div>
     </div>
   </header>
-  <!-- ***** Header Area End ***** -->
+  <!-- ***** Área do Cabeçalho Fim ***** -->
 
   <div class="page-heading header-text">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h3>Our Shop</h3>
-          <span class="breadcrumb"><a href="#">Home</a> > Our Shop</span>
+          <h3>Nossa Loja</h3>
+          <span class="breadcrumb"><a href="#">Início</a> > Nossa Loja</span>
         </div>
       </div>
     </div>
@@ -88,16 +88,16 @@ https://templatemo.com/tm-589-lugx-gaming
     <div class="container">
       <ul class="trending-filter">
         <li>
-          <a class="is_active" href="#!" data-filter="*">Show All</a>
+          <a class="is_active" href="#!" data-filter="*">Mostrar Todos</a>
         </li>
         <li>
-          <a href="#!" data-filter=".adv">Adventure</a>
+          <a href="#!" data-filter=".adv">Aventura</a>
         </li>
         <li>
-          <a href="#!" data-filter=".str">Strategy</a>
+          <a href="#!" data-filter=".str">Estratégia</a>
         </li>
         <li>
-          <a href="#!" data-filter=".rac">Racing</a>
+          <a href="#!" data-filter=".rac">Corrida</a>
         </li>
       </ul>
       <div class="row trending-box">
@@ -108,7 +108,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <span class="price"><em>$36</em>$24</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -121,7 +121,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <span class="price"><em>$32</em>$22</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -134,7 +134,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <span class="price"><em>$45</em>$30</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -147,7 +147,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <span class="price"><em>$32</em>$22</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -160,7 +160,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <span class="price"><em>$38</em>$26</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -173,7 +173,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <span class="price"><em>$30</em>$20</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -186,7 +186,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <span class="price"><em>$32</em>$22</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -199,7 +199,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <span class="price"><em>$32</em>$22</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -212,7 +212,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <span class="price"><em>$28</em>$20</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -225,7 +225,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <span class="price"><em>$26</em>$18</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -238,7 +238,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <span class="price"><em>$32</em>$24</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -251,7 +251,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <span class="price"><em>$45</em>$30</span>
             </div>
             <div class="down-content">
-              <span class="category">Action</span>
+              <span class="category">Ação</span>
               <h4>Assasin Creed</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
@@ -275,7 +275,7 @@ https://templatemo.com/tm-589-lugx-gaming
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+        <p>Copyright © 2048 LUGX Gaming Company. Todos os direitos reservados. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
       </div>
     </div>
   </footer>
