--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+
+    <!-- Modificação para o Modo Noturno -->
+    <link rel="stylesheet" href="assets/css/noturn-mode.css">
 <!--
 
 TemplateMo 589 lugx gaming
@@ -29,6 +32,9 @@ https://templatemo.com/tm-589-lugx-gaming
   </head>
 
 <body>
+
+  <!-- Modificação para o Modo Noturno -->
+  <button id="dark-mode-toggle">Modo Noturno</button>
 
   <!-- ***** Preloader Início ***** -->
   <div id="js-preloader" class="js-preloader">
@@ -152,7 +158,8 @@ https://templatemo.com/tm-589-lugx-gaming
     </div>
   </div>  
 
-  <footer>
+  <!-- Modificado (adicionado a Class footer-bg) -->
+  <footer class="footer-bg" style="background-image: url('assets/images/footer-bg.jpg');">
     <div class="container">
       <div class="col-lg-12">
         <p>Copyright © 2048 LUGX Gaming Company. Todos os direitos reservados. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
@@ -168,6 +175,10 @@ https://templatemo.com/tm-589-lugx-gaming
   <script src="assets/js/owl-carousel.js"></script>
   <script src="assets/js/counter.js"></script>
   <script src="assets/js/custom.js"></script>
+
+  <!-- Modificação para o Modo Noturno -->
+  <script src="assets/js/noturn-mode.js"></script>
+
 
   </body>
 </html>
