--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+
+    <!-- Modificação para o Modo Noturno -->
+    <link rel="stylesheet" href="assets/css/noturn-mode.css">
 <!--
 
 TemplateMo 589 lugx gaming
@@ -29,6 +32,11 @@ https://templatemo.com/tm-589-lugx-gaming
   </head>
 
 <body>
+
+ <!-- Botão de alternância Modo Noturno -->
+<button id="dark-mode-toggle">🌙 Noturno</button>
+
+
 
   <!-- ***** Preloader Start ***** -->
   <div id="js-preloader" class="js-preloader">
@@ -73,17 +81,18 @@ https://templatemo.com/tm-589-lugx-gaming
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <div class="main-banner">
+  <!-- Modificado (Adicionado o data) -->
+  <div class="main-banner" data-dark="assets/images/banner-bg-dark.jpg">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 align-self-center">
           <div class="caption header-text">
             <h6>Bem-vindo ao Lugx</h6>
             <h2>O MELHOR SITE DE GAMES!</h2>
-            <p>LUGX Gaming é um template gratuito em Bootstrap 5 HTML CSS para sites de games. Você pode baixar e usar este layout para fins comerciais. Compartilhe com seus amigos sobre o TemplateMo.</p>
+            <p>LUGX Gaming é um template gratuito...</p>
             <div class="search-input">
               <form id="search" action="#">
-                <input type="text" placeholder="Digite Algo" id='searchText' name="searchKeyword" onkeypress="handle" />
+                <input type="text" placeholder="Digite Algo" name="searchKeyword" />
                 <button role="button">Pesquisar Agora</button>
               </form>
             </div>
@@ -99,6 +108,7 @@ https://templatemo.com/tm-589-lugx-gaming
       </div>
     </div>
   </div>
+
 
   <div class="features">
     <div class="container">
@@ -401,7 +411,8 @@ https://templatemo.com/tm-589-lugx-gaming
     </div>
   </div>
 
-  <footer>
+  <!-- Modificado (adicionado a Class footer-bg) -->
+  <footer class="footer-bg" style="background-image: url('assets/images/footer-bg.jpg');">
     <div class="container">
       <div class="col-lg-12">
         <p>Copyright © 2048 LUGX Gaming Company. Todos os direitos reservados. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
@@ -417,6 +428,9 @@ https://templatemo.com/tm-589-lugx-gaming
   <script src="assets/js/owl-carousel.js"></script>
   <script src="assets/js/counter.js"></script>
   <script src="assets/js/custom.js"></script>
+
+  <!-- Modificação para o Modo Noturno -->
+   <script src="assets/js/noturn-mode.js"></script>
 
   </body>
 </html>
