--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ https://templatemo.com/tm-589-lugx-gaming
 
 <body>
 
- <!-- Botão de alternância Modo Noturno -->
-<button id="dark-mode-toggle">🌙 Noturno</button>
+  <!-- Botão de alternância Modo Noturno -->
+  <button id="dark-mode-toggle">🌙 Noturno</button>
 
 
 
@@ -68,7 +68,7 @@ https://templatemo.com/tm-589-lugx-gaming
                       <li><a href="shop.html">Nossa Loja</a></li>
                       <li><a href="product-details.html">Detalhes do Produto</a></li>
                       <li><a href="contact.html">Contato</a></li>
-                      <li><a href="#">Entrar</a></li>
+                      <li><a href="login.html">Entrar</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -415,7 +415,11 @@ https://templatemo.com/tm-589-lugx-gaming
   <footer class="footer-bg" style="background-image: url('assets/images/footer-bg.jpg');">
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 LUGX Gaming Company. Todos os direitos reservados. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+        <p>
+          Copyright © 2048 LUGX Gaming Company. Todos os direitos reservados. &nbsp;&nbsp;
+          <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a>
+          &nbsp;| Modificado por Victor Gabryel da Silva
+        </p>
       </div>
     </div>
   </footer>
