--- a/login.html
+++ b/login.html
@@ -65,6 +65,31 @@
             border: none;
             background-color: rgba(0, 0, 0, 0.08);
             backdrop-filter: blur(5px);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 1.5rem;
+        }
+
+        .card-login .card-body {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        /* Inputs e selects */
+        .card-login input.form-control,
+        .card-login select.form-control {
+            border-radius: 0;
+            height: 45px;
+        }
+
+        /* Botão */
+        .card-login .btn-primary {
+            border-radius: 0;
+            padding: 10px;
+            height: 45px;
         }
 
         /* Para telas pequenas, colocar em coluna */
@@ -102,8 +127,6 @@
             text-decoration: none;
         }
 
-    
-
         /* Preloader */
         .js-preloader {
             position: fixed;
@@ -138,13 +161,28 @@
         }
 
         @keyframes pulse {
-            0%, 100% { transform: scale(1); opacity: 1; }
-            50% { transform: scale(1.5); opacity: 0.5; }
+            0%,
+            100% {
+                transform: scale(1);
+                opacity: 1;
+            }
+
+            50% {
+                transform: scale(1.5);
+                opacity: 0.5;
+            }
         }
 
         @keyframes bounce {
-            0%, 80%, 100% { transform: translateY(0); }
-            40% { transform: translateY(-15px); }
+            0%,
+            80%,
+            100% {
+                transform: translateY(0);
+            }
+
+            40% {
+                transform: translateY(-15px);
+            }
         }
 
         /* Modo noturno */
@@ -157,7 +195,8 @@
             background-color: rgba(255, 255, 255, 0.05);
         }
 
-        body.dark-mode header, body.dark-mode footer {
+        body.dark-mode header,
+        body.dark-mode footer {
             background-color: #1e1e1e;
         }
     </style>
@@ -209,7 +248,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h3>Criar sua Conta</h3>
+                    <h3>Cadastro!</h3>
+                    <!-- Breadcrumb apenas, sem repetir título -->
                     <span class="breadcrumb"><a href="index.html">Início</a> > Criar Conta</span>
                 </div>
             </div>
@@ -229,6 +269,7 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="card shadow-sm card-login">
                         <div class="card-body p-4">
+                            <!-- Título do Form -->
                             <h2 class="text-center mb-4">Criar Conta</h2>
 
                             <div class="alert alert-danger" id="mensagem-erro"></div>
@@ -288,6 +329,7 @@
                     Copyright © 2048 LUGX Gaming Company. Todos os direitos reservados. &nbsp;&nbsp;
                     <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a>
                     &nbsp;| Modificado por Victor Gabryel da Silva
+                </p>
             </div>
         </div>
     </footer>
@@ -301,39 +343,31 @@
     <script src="assets/js/noturn-mode.js"></script>
 
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-        const form = document.getElementById("form-cadastro");
-        const mensagemErro = document.getElementById("mensagem-erro");
+        document.addEventListener("DOMContentLoaded", function () {
+            const form = document.getElementById("form-cadastro");
+            const mensagemErro = document.getElementById("mensagem-erro");
 
-        form.addEventListener("submit", function(e) {
-            e.preventDefault(); // impede o envio real do form
+            form.addEventListener("submit", function (e) {
+                e.preventDefault(); // impede o envio real do form
 
-            // Pega os valores das senhas
-            const senha = form.senha.value;
-            const confirmarSenha = form.confirmar_senha.value;
+                const senha = form.senha.value;
+                const confirmarSenha = form.confirmar_senha.value;
 
-            // Resetar mensagem de erro
-            mensagemErro.style.display = "none";
-            mensagemErro.innerText = "";
+                mensagemErro.style.display = "none";
+                mensagemErro.innerText = "";
 
-            // Validação de senha
-            if (senha !== confirmarSenha) {
-                mensagemErro.style.display = "block";
-                mensagemErro.innerText = "As senhas não coincidem!";
-                return;
-            }
+                if (senha !== confirmarSenha) {
+                    mensagemErro.style.display = "block";
+                    mensagemErro.innerText = "As senhas não coincidem!";
+                    return;
+                }
 
-            // Aqui você pode adicionar mais validações se quiser
-
-            // Se passou nas validações
-            alert("Cadastro realizado com sucesso! (Simulação)");
-            form.reset(); // limpa o formulário
+                alert("Cadastro realizado com sucesso! (Simulação)");
+                form.reset();
+            });
         });
-    });
     </script>
 
-
-    
 </body>
 
 </html>
